fixes to the interval symbols part of the text, and a fix to the "faster" N1PFB pseudo code. also added some more references to the original CST paper and the intervals symbols paper.

--- a/paper/local.bib
+++ b/paper/local.bib
@@ -42,6 +42,7 @@
 @string{ asru = "Proc. ASRU"}
 @string{ swat = "Proc. SWAT"}
 @string{ fsttcs = "Proc. FSTTCS"}
+@string{ cpm = "Proc. CPM"}
 
 @article{DBLP:journals/tacl/HeLL15,
   author    = {Hua He and
@@ -332,6 +333,17 @@ address = {New York, NY, USA}
   year      = {2007}
 }
 
+
+@article{s-tcs07,
+  author    = {Kunihiko Sadakane},
+  title     = {Compressed Suffix Trees with Full Functionality},
+  journal   = {Theory Comput. Syst.},
+  volume    = {41},
+  number    = {4},
+  pages     = {589--607},
+  year      = {2007},
+  doi       = {10.1007/s00224-006-1198-x}
+}
 
 @article{s-jalg03,
   author    = {K. Sadakane},
