--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -52,6 +52,7 @@
 \newcommand{\nlplusbacklname}{\textsc{N1pBack1}\xspace}
 \newcommand{\nlplusfrontlname}{\textsc{N1pFront1}\xspace}
 \newcommand{\nlplusbacklfunc}[3]{\nlplusbacklname(#1, #2, #3)} % " ^ 2
+\newcommand{\nlplusfrontlfunc}[3]{\nlplusfrontlname(#1, #2, #3)} % " ^ 2
 \newcommand{\nlplusfrontbackname}{\textsc{N1pFrontBack}\xspace}
 \newcommand{\nlplusfrontbackfunc}[5]{\nlplusfrontbackname(#1, #2, #3, #4, #5)} % " 
 \newcommand{\nlplusfrontbacklname}{\textsc{N1pFrontBack1}\xspace}
