--- a/paper/sec-suffix.tex
+++ b/paper/sec-suffix.tex
@@ -140,7 +140,7 @@ in practice~\cite{gbmp2014sea}.
 In the same way the FM-index emulates the functionality of the suffix array in
 little space, {\it compressed suffix trees} (\CST) provide the functionality
 of suffix trees while requiring significantly less space than their uncompressed
-counterparts~\cite{ofg-spire10}. A \CST uses a compressed suffix array (\CSA) such
+counterparts~\cite{s-tcs07}. A \CST uses a compressed suffix array (\CSA) such
 as the FM-Index but stores additional information to represent the shape of
 the suffix tree as well as information about path-labels. Again a variety
 of different storage schemes exist, however for simplicity we focus on
