--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -94,7 +94,7 @@ about $20\times$ the training corpus).
 %we focus on KN-smoothing in this paper, our approach can be used to index and retrieve 
 %counts needed in other smoothing techniques as well [chen and goodman].} [kneser kney].  
  
-In contrast, we make use of recent advances in  \emph{compressed suffix trees} (\CSTs) \cite{rno-talg11} 
+In contrast, we make use of recent advances in  \emph{compressed suffix trees} (\CSTs) \cite{s-tcs07} 
 to build compact indices with much more modest memory requirements ($\approx$ the size of the corpus).
 We present methods for extracting frequency and unique context count 
 statistics for \ngram queries from \CSTs,  and two algorithms for
@@ -109,8 +109,8 @@ number of unique contexts to both sides.
 % \ngram is more difficult to compute, as is the process of searching in both \CSTs,
 % resulting in slow runtime performance. 
 Our second method addresses this problem using a single \CST backed by
-a wavelet tree based FM-index \cite{fmmn-talg07}, which results in a better time
-complexity of querying and a considerably faster runtime performance.
+a wavelet tree based FM-index \cite{fmmn-talg07}, which results in better time
+complexity and considerably faster runtime performance.
  
  % We further show how to leverage count queries for shorter contexts in queries for 
 % longer contexts to speed up the computation of KN-smoothed probabilities on the fly 
