--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -11,7 +11,7 @@
 \addtolength{\belowcaptionskip}{-1ex}
 
 \title{Compact, Efficient and Unlimited Capacity:
-    Language Modelling with Compressed Suffix Trees}
+    Language Modeling with Compressed Suffix Trees}
 
 \author{First Author \\
   Affiliation / Address line 1 \\
