--- a/paper/supplementary.tex
+++ b/paper/supplementary.tex
@@ -72,7 +72,7 @@ Compact, Efficient and Unlimited Capacity:
     \label{alg:n1plus}}
   \begin{algorithmic}[1]
     \Require{node $n$ in \CST $t$ matches $\alpha$}
-    \Function{N1Plus}{$t, n, \alpha$} %\Comment{ $t$ is either forward or reverse \CST}
+    \Function{N1P}{$t, n, \alpha$} %\Comment{ $t$ is either forward or reverse \CST}
         \Let{$o$}{$1$} %\Comment{yielding $\nlplus{\patdot}$ or $\nlplus{\dotpat}$, respectively}
         %\If{$\leaf{t}{n} \, \wedge \, \depth{t}{n} = |\alpha|$}
         \If{$\depth{t}{n} = |\alpha|$}
