--- a/paper/sec-lmsdsl.tex
+++ b/paper/sec-lmsdsl.tex
@@ -227,9 +227,9 @@ The \emph{interval-symbols} method uses \rankop~ operations to efficiently ident
 and the ranges $\SA[l_s,r_s]$ corresponding to the patterns $s\alpha$ for all $s \in P(\alpha)$ by visiting all leaves of the wavelet tree of symbols occurring in $\colbwt[l,r]$ (corresponding to $\alpha$) in $\Order{|P(\alpha)|\log\alphabetsize}$ time (lines 6-8).
 These ranges $\SA[l',r']$ can be used to find the corresponding suffix tree node for each $s\alpha$ in $\Order{1}$ time.
 To illustrate, consider the pattern $\alpha=\text{``night''}$ in Figure~\ref{fig-suffix-tree}.
-From \colbwt\ we can see that this is preceeded by $s=$``old'' (1$^{st}$ occurrence in \colbwt) and $s=$``the'' (4$^{th}$ and $5^{th}$);
+From \colbwt\ we can see that this is preceeded by $s=$``old'' (1$^{st}$ occurrence in \colbwt) and $s=$``the'' ($3^{rd}$ and $4^{th}$);
 from which we can compute the suffix tree nodes, namely
-$[15,15]$ and $[16+(4-1),16+(5-1)] = [19,20]$ for ``old'' and ``the'' respectively.\footnote{Using the offsets into the \SA for each symbol, $C_{\text{old}} = 15$ and $C_{\text{the}} = 16$, while $-1$ adjusts for counting from 1.}
+$[15,15]$ and $[16+(3-1),16+(4-1)] = [18,19]$ for ``old'' and ``the'' respectively.\footnote{Using the offsets into the \SA for each symbol, $C_{\text{old}} = 15$ and $C_{\text{the}} = 16$, while $-1$ adjusts for counting from 1.}
 %$C_{\text{the}} = 16$ (``the'' corresponds to \SA entries 16--20) and therefore the location of ``the night'' is $[16+(4-1),16+(5-1)] = [19,20]$.\footnote{Subtracting one to adjusts for counting from 1 in the above exposition, not 0.}
 %For example, in Figure~\ref{fig-suffix-tree} the pattern $\alpha=\text{``night''}$ is preceeded by $s=$``old'' and $s=$``the''.
 %These correspond to the only occurrence of ``old'', and the 4$^{th}$ and 5$^{th}$ occurrence of ``the'' in the BWT.
