--- a/paper/supplementary.tex
+++ b/paper/supplementary.tex
@@ -102,7 +102,7 @@ Compact, Efficient and Unlimited Capacity:
 
 
 \begin{algorithm*}[htpb]
-  \caption{Compute Kneser-Ney probability, $P\big(w_k | w^{k-1}_{k-(n-1)}\big)$, using a single \CST
+  \caption{Compute Kneser-Ney probability, $P\big(w_k | w^{k-1}_{k-(m-1)}\big)$, using a single \CST
     \label{alg:pkn_fwd}}
   \begin{algorithmic}[1]
     \Function{ProbKneserNey1}{$\tf, \ws, m$} 
@@ -114,23 +114,23 @@ Compact, Efficient and Unlimited Capacity:
           \If{$i > 1$}
              \Let{$\nf$}{$\backwardsearch{\tf}{\lb{\nf}}{\rb{\nf}}{w_{k-i+1}}$}
           \EndIf
-          \Let{$D_i$}{discount parameter for \ngram}
+          \Let{$D_i$}{discount parameter for $i$gram}
           \If{$i = m$} % or if s == '<s>' 
                  \Comment{compute the `count' and `denominator' for the full match}
              \Let{$c$}{$\size{\tf}{\nffull}$} 
              \Let{$d$}{$\size{\tf}{\nf}$}
           \Else
              \Let{$c$}{$\nlplusbacklfunc{\tf}{\nffull}{\Bigcdot w^{k-1}_{k-i+1}}$}
-             \Let{$d$}{$\nlplusfrontbacklfunc{\tf}{\nf}{\Bigcdot w^{k-1}_{k-i+1} \Bigcdot}$} \Comment{N.b., precompute $\nlplus{\Bigcdot\Bigcdot}$}
+             \Let{$d$}{$\nlplusfrontbacklfunc{\tf}{\nf}{\Bigcdot w^{k-1}_{k-i+1} \Bigcdot}$} 
            \EndIf
            \If{$i > 1$}
              \If{$\nf$ is valid} \Comment{compute backoff probability, or backoff for unseen contexts}
-                  \Let{$d$}{$\size{\tf}{\nf}$}
+                  %\Let{$d$}{$\size{\tf}{\nf}$}
                   \Let{$q$}{$\nlplusfunc{\tf}{\nf}{w^{k-1}_{k-i+1} \Bigcdot}$}
                   \Let{$p$}{ $\frac{1}{d} \left( \max(c-D_i, 0)  + D_i  q  p \right)$}
               \EndIf
           \Else
-             \Let{$p$}{ $\frac{c}{d}$}
+             \Let{$p$}{ ${c}/{N^{1+}(\Bigcdot \Bigcdot)}$}
           \EndIf
         \EndFor
       \State \Return{$p$}
